--- a/static/index.css
+++ b/static/index.css
@@ -7,9 +7,11 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    background-color: lightgreen;
 }
 
 h1 {
     font-family: 'Courier New';
     color: red;
+    text-align: center;
 }
